--- a/intro-r.Rmd
+++ b/intro-r.Rmd
@@ -1,8 +1,8 @@
-
 ---
-
+author: " Your Name"
+date: "Today's Date"
 title: "Introduction for students new to R and RStudio"
-output: statsr:::statswithr_lab
+output: github_document
 ---
 
 <div class="instructions">
