--- a/intro-r.Rmd
+++ b/intro-r.Rmd
@@ -69,10 +69,10 @@ You should have already installed these packages using commands like
 
 ```{r install-packages, message = FALSE}
 
-#library(dplyr)
-#library(ggplot2)
-#library(statsr)
-#library(usethis)
+#install.packages(dplyr)
+#install.packages(ggplot2)
+#install.packages(statsr)
+#install.packages(usethis)
 ```
 
 Next, you need to load the packages in your working environment. We do this with
