--- a/intro-r.Rmd
+++ b/intro-r.Rmd
@@ -8,7 +8,7 @@ output: statsr:::statswithr_lab
 <div class="instructions">
 
 </div>
-## Getting Started
+## Yay We've Started
 
 If you have not ever used GitHub, you will first need to go in and create an account.
 Look at the guidlines on Jenny Bryant's Happy Git with R website: https://happygitwithr.com/github-acct.html
